@@ -4,109 +4,107 @@
 
 package org.takeback.chat.utils;
 
-import java.net.URLEncoder;
-import java.security.NoSuchAlgorithmException;
-import java.security.MessageDigest;
 import java.io.InputStream;
-import java.io.Reader;
-import java.io.BufferedReader;
-import java.io.InputStreamReader;
-import java.net.HttpURLConnection;
-import java.net.URL;
+import java.net.URLDecoder;
+import java.io.ByteArrayOutputStream;
+import org.apache.commons.httpclient.HttpMethod;
+import org.apache.commons.httpclient.NameValuePair;
+import org.apache.commons.httpclient.URI;
+import org.apache.commons.httpclient.methods.GetMethod;
+import org.apache.commons.httpclient.HttpConnectionManager;
+import org.apache.commons.httpclient.HttpClient;
+import org.apache.commons.httpclient.SimpleHttpConnectionManager;
+import org.apache.commons.httpclient.params.HttpClientParams;
 
 public class SmsUtil
 {
-    static String httpUrl;
-    static String testUsername;
-    static String testPassword;
+    static String url;
+    static String un;
+    static String pw;
     static String sign;
+    static String codeTpl;
     
-    public static void main(final String[] args) {
-        send("13625974105", "\u542c\u95fb,\u5b89\u6eaa\u6709\u4e2a\u59d3\u674e\u76842XD!");
+    
+    
+    public static String getUrl() {
+		return url;
+	}
+
+	public static void setUrl(String url) {
+		SmsUtil.url = url;
+	}
+
+	public static String getUn() {
+		return un;
+	}
+
+	public static void setUn(String un) {
+		SmsUtil.un = un;
+	}
+
+	public static String getPw() {
+		return pw;
+	}
+
+	public static void setPw(String pw) {
+		SmsUtil.pw = pw;
+	}
+
+	public static String getSign() {
+		return sign;
+	}
+
+	public static void setSign(String sign) {
+		SmsUtil.sign = sign;
+	}
+
+	public static String getCodeTpl() {
+		return codeTpl;
+	}
+
+	public static void setCodeTpl(String codeTpl) {
+		SmsUtil.codeTpl = codeTpl;
+	}
+
+	public static String sendSmsCode(final String phoneNo, final String code) {
+        return send(phoneNo, SmsUtil.codeTpl.replace("${code}", code) + SmsUtil.sign);
     }
     
-    public static boolean send(final String phone, final String content) {
-        final StringBuffer httpArg = new StringBuffer();
-        httpArg.append("u=").append(SmsUtil.testUsername).append("&");
-        httpArg.append("p=").append(md5(SmsUtil.testPassword)).append("&");
-        httpArg.append("m=").append(phone).append("&");
-        httpArg.append("c=").append(encodeUrlString(content, "UTF-8")).append(encodeUrlString(SmsUtil.sign, "UTF-8"));
-        final String result = request(SmsUtil.httpUrl, httpArg.toString());
-        return "0".equals(result);
+    public static void main(final String... args) {
+        send("13614416609", "SB" + SmsUtil.sign);
     }
     
-    public static String request(String httpUrl, final String httpArg) {
-        BufferedReader reader = null;
-        String result = null;
-        final StringBuffer sbf = new StringBuffer();
-        httpUrl = httpUrl + "?" + httpArg;
+    public static String send(final String phone, final String msg) {
+        final HttpClient client = new HttpClient(new HttpClientParams(), (HttpConnectionManager)new SimpleHttpConnectionManager(true));
+        final GetMethod method = new GetMethod();
         try {
-            final URL url = new URL(httpUrl);
-            final HttpURLConnection connection = (HttpURLConnection)url.openConnection();
-            connection.setRequestMethod("GET");
-            connection.connect();
-            final InputStream is = connection.getInputStream();
-            reader = new BufferedReader(new InputStreamReader(is, "UTF-8"));
-            String strRead = reader.readLine();
-            if (strRead != null) {
-                sbf.append(strRead);
-                while ((strRead = reader.readLine()) != null) {
-                    sbf.append("\n");
-                    sbf.append(strRead);
-                }
+            final URI base = new URI(SmsUtil.url, false);
+            method.setURI(new URI(base, "send", false));
+            method.setQueryString(new NameValuePair[] { new NameValuePair("un", SmsUtil.un), new NameValuePair("pw", SmsUtil.pw), new NameValuePair("phone", phone), new NameValuePair("rd", "0"), new NameValuePair("msg", msg), new NameValuePair("ex", "") });
+            final int result = client.executeMethod((HttpMethod)method);
+            if (result != 200) {
+                throw new Exception("HTTP ERROR Status: " + method.getStatusCode() + ":" + method.getStatusText());
             }
-            reader.close();
-            result = sbf.toString();
+            final InputStream in = method.getResponseBodyAsStream();
+            final ByteArrayOutputStream baos = new ByteArrayOutputStream();
+            final byte[] buffer = new byte[1024];
+            int len = 0;
+            while ((len = in.read(buffer)) != -1) {
+                baos.write(buffer, 0, len);
+            }
+            System.out.println(URLDecoder.decode(baos.toString(), "UTF-8"));
         }
         catch (Exception e) {
-            e.printStackTrace();
+            method.releaseConnection();
         }
-        return result;
-    }
-    
-    public static String md5(final String plainText) {
-        StringBuffer buf = null;
-        try {
-            final MessageDigest md = MessageDigest.getInstance("MD5");
-            md.update(plainText.getBytes());
-            final byte[] b = md.digest();
-            buf = new StringBuffer("");
-            for (int offset = 0; offset < b.length; ++offset) {
-                int i = b[offset];
-                if (i < 0) {
-                    i += 256;
-                }
-                if (i < 16) {
-                    buf.append("0");
-                }
-                buf.append(Integer.toHexString(i));
-            }
-        }
-        catch (NoSuchAlgorithmException e) {
-            e.printStackTrace();
-        }
-        return buf.toString();
-    }
-    
-    public static String encodeUrlString(final String str, final String charset) {
-        String strret = null;
-        if (str == null) {
-            return str;
-        }
-        try {
-            strret = URLEncoder.encode(str, charset);
-        }
-        catch (Exception e) {
-            e.printStackTrace();
-            return null;
-        }
-        return strret;
+        return "";
     }
     
     static {
-        SmsUtil.httpUrl = "http://api.smsbao.com/sms";
-        SmsUtil.testUsername = "test02";
-        SmsUtil.testPassword = "test02";
-        SmsUtil.sign = "\u3010\u75af\u72c2\u7684\u7ea2\u5305\u3011";
+        SmsUtil.url = "http://sms.253.com/msg/";
+        SmsUtil.un = "N3360826";
+        SmsUtil.pw = "cQEm9uVayYad6e";
+        SmsUtil.sign = "\u3010\u767e\u57ce\u7f51\u3011";
+        SmsUtil.codeTpl = "\u60a8\u7684\u9a8c\u8bc1\u7801\u4e3a:${code}";
     }
 }
